// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Open Composer CLI Component Snapshots ComposerApp renders correctly 1`] = `
"\x1B[34m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
\x1B[34m│\x1B[39m                                   \x1B[1m\x1B[34m🎼 Open Composer CLI v0.0.0\x1B[39m\x1B[22m                                    \x1B[34m│\x1B[39m
\x1B[34m└──────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m
\x1B[90m┌────────────────────────────┐┌──────────────────────────────────────┐┌────────────────────────────┐\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m                            \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[1m\x1B[34m📂 Workspaces\x1B[39m\x1B[22m              \x1B[90m││\x1B[39m \x1B[1m\x1B[32m💬 Chat Interface\x1B[39m\x1B[22m                    \x1B[90m││\x1B[39m \x1B[1m\x1B[35m📝 Code Editor\x1B[39m\x1B[22m             \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m                            \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[32m● main\x1B[39m                     \x1B[90m││\x1B[39m \x1B[33m🎼 composer\x1B[90m\x1B[2m 10:00\x1B[22m\x1B[39m                    \x1B[90m││\x1B[39m \x1B[90m┌──────────────────────┐\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m  Welcome to Open Composer CLI! What  \x1B[90m││\x1B[39m \x1B[90m│\x1B[39m                      \x1B[90m│\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m would you like to build?             \x1B[90m││\x1B[39m \x1B[90m│\x1B[39m                      \x1B[90m│\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[1m\x1B[33m🌿 Branches\x1B[39m\x1B[22m                \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m \x1B[90m│\x1B[39m   \x1B[90m\x1B[2mNo file selected\x1B[22m\x1B[39m   \x1B[90m│\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m \x1B[90m│\x1B[39m                      \x1B[90m│\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[32m● main\x1B[39m                     \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m \x1B[90m│\x1B[39m                      \x1B[90m│\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[90m\x1B[2m+ New worktree\x1B[22m\x1B[39m             \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m \x1B[90m└──────────────────────┘\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m                            \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m \x1B[1m\x1B[33m🔧 File Tree\x1B[39m\x1B[22m               \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[1m\x1B[35m🤖 Agents\x1B[39m\x1B[22m                  \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m                            \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m \x1B[90m📁 src/\x1B[39m                    \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[32m● claude-code\x1B[39m              \x1B[90m││\x1B[39m \x1B[34m┌──────────────────────────────────┐\x1B[39m \x1B[90m││\x1B[39m \x1B[90m  📄 index.ts\x1B[39m              \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[90m○ codex-nation\x1B[39m             \x1B[90m││\x1B[39m \x1B[34m│💭 \x1B[90m\x1B[2m_\x1B[22m\x1B[39m                              \x1B[34m│\x1B[39m \x1B[90m││\x1B[39m \x1B[90m  📁 components/\x1B[39m           \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m \x1B[90m○ cursor-agent\x1B[39m             \x1B[90m││\x1B[39m \x1B[34m└──────────────────────────────────┘\x1B[39m \x1B[90m││\x1B[39m \x1B[90m    📄 ComposerApp.tsx\x1B[39m     \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m \x1B[90m\x1B[2mType your message and press Enter...\x1B[22m\x1B[39m \x1B[90m││\x1B[39m \x1B[90m    📄 ChatInterface.tsx\x1B[39m   \x1B[90m│\x1B[39m
\x1B[90m│\x1B[39m                            \x1B[90m││\x1B[39m                                      \x1B[90m││\x1B[39m                            \x1B[90m│\x1B[39m
\x1B[90m└────────────────────────────┘└──────────────────────────────────────┘└────────────────────────────┘\x1B[39m
\x1B[90m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
\x1B[90m│Ready\x1B[39m                                                                               \x1B[90mCtrl+C to exit│\x1B[39m
\x1B[90m└──────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m"
`;

exports[`Open Composer CLI Component Snapshots ChatInterface renders correctly with messages 1`] = `
"
 \x1B[1m\x1B[32m💬 Chat Interface\x1B[39m\x1B[22m

 \x1B[33m🤖 claude-code\x1B[90m\x1B[2m 10:00\x1B[22m\x1B[39m
  Hello, how can I help you?

 \x1B[36m👤 You\x1B[90m\x1B[2m 10:01\x1B[22m\x1B[39m
  I need help with my code


 \x1B[34m┌────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
 \x1B[34m│💭 \x1B[90m\x1B[2m_\x1B[22m\x1B[39m                                                                                            \x1B[34m│\x1B[39m
 \x1B[34m└────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m
 \x1B[90m\x1B[2mType your message and press Enter...\x1B[22m\x1B[39m
"
`;

exports[`Open Composer CLI Component Snapshots Sidebar renders correctly with worktrees 1`] = `
"
 \x1B[1m\x1B[34m📂 Workspaces\x1B[39m\x1B[22m

 \x1B[32m● main\x1B[39m
 \x1B[90m○ feature-1\x1B[39m


 \x1B[1m\x1B[33m🌿 Branches\x1B[39m\x1B[22m

 \x1B[32m● main\x1B[39m
 \x1B[90m\x1B[2m+ New worktree\x1B[22m\x1B[39m


 \x1B[1m\x1B[35m🤖 Agents\x1B[39m\x1B[22m

 \x1B[32m● claude-code\x1B[39m
 \x1B[90m○ codex-nation\x1B[39m
 \x1B[90m○ cursor-agent\x1B[39m
"
`;

exports[`Open Composer CLI Component Snapshots CodeEditor renders correctly with file 1`] = `
"
 \x1B[1m\x1B[35m📝 Code Editor\x1B[39m\x1B[22m

 \x1B[34m📄 src/index.ts\x1B[39m

 \x1B[90m┌────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m \x1B[90m\x1B[2mCode content will appear here...\x1B[22m\x1B[39m                                                               \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m└────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m

 \x1B[1m\x1B[33m🔧 File Tree\x1B[39m\x1B[22m

 \x1B[90m📁 src/\x1B[39m
 \x1B[90m  📄 index.ts\x1B[39m
 \x1B[90m  📁 components/\x1B[39m
 \x1B[90m    📄 ComposerApp.tsx\x1B[39m
 \x1B[90m    📄 ChatInterface.tsx\x1B[39m
"
`;

exports[`Open Composer CLI Component Snapshots CodeEditor renders correctly without file 1`] = `
"
 \x1B[1m\x1B[35m📝 Code Editor\x1B[39m\x1B[22m

 \x1B[90m┌────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                        \x1B[90m\x1B[2mNo file selected\x1B[22m\x1B[39m                                        \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m│\x1B[39m                                                                                                \x1B[90m│\x1B[39m
 \x1B[90m└────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m

 \x1B[1m\x1B[33m🔧 File Tree\x1B[39m\x1B[22m

 \x1B[90m📁 src/\x1B[39m
 \x1B[90m  📄 index.ts\x1B[39m
 \x1B[90m  📁 components/\x1B[39m
 \x1B[90m    📄 ComposerApp.tsx\x1B[39m
 \x1B[90m    📄 ChatInterface.tsx\x1B[39m
"
`;

exports[`Open Composer CLI Component Snapshots Layout renders correctly 1`] = `
"\x1B[34m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
\x1B[34m│\x1B[39m                                   \x1B[1m\x1B[34m🎼 Open Composer CLI v0.0.0\x1B[39m\x1B[22m                                    \x1B[34m│\x1B[39m
\x1B[34m└──────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m
Test content
\x1B[90m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[39m
\x1B[90m│Ready\x1B[39m                                                                               \x1B[90mCtrl+C to exit│\x1B[39m
\x1B[90m└──────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[39m"
`;

exports[`Open Composer CLI Component Snapshots TelemetryConsentPrompt renders correctly 1`] = `
"

  \x1B[1m\x1B[36m🔒 Open Composer - Privacy Notice\x1B[39m\x1B[22m

  Open Composer respects your privacy and is committed to protecting your data.


  \x1B[1m📊 Telemetry Collection (Optional)\x1B[22m


  We can collect anonymous usage statistics to help improve Open Composer.


  This includes command usage, error reports, and performance metrics.


  All data is anonymized and cannot be used to identify you.


  You can change this setting anytime with: open-composer telemetry disable



  Enable telemetry collection?

  \x1B[90mUse arrow keys to select, Enter to confirm, Esc to skip\x1B[39m


  \x1B[32m● Yes, enable telemetry\x1B[39m  \x1B[90m○ No, keep disabled\x1B[39m

"
`;

exports[`Open Composer CLI Component Snapshots GitWorktreeCreatePrompt renders correctly 1`] = `
"

  \x1B[1m\x1B[36m🚀 Create Git Worktree\x1B[39m\x1B[22m

  Create a new git worktree with interactive configuration.



  \x1B[1mConfiguration:\x1B[22m

  \x1B[36mPath:\x1B[32mEnter worktree path *\x1B[90m\x1B[2m_\x1B[22m\x1B[39m
  \x1B[36mRef:\x1B[90mOptional commit/branch ref\x1B[39m
  \x1B[36mBranch:\x1B[90mOptional branch name\x1B[39m


  \x1B[1mOptions:\x1B[22m

  \x1B[31m[○] Force\x1B[90m\x1B[2m (F)\x1B[22m\x1B[39m
  \x1B[31m[○] Detach\x1B[90m\x1B[2m (D)\x1B[22m\x1B[39m
  \x1B[31m[○] No Checkout\x1B[90m\x1B[2m (N)\x1B[22m\x1B[39m
  \x1B[31m[○] Branch Force\x1B[90m\x1B[2m (B)\x1B[22m\x1B[39m


  \x1B[90mTab/Shift+Tab: Navigate • Enter: Next/Submit • ↑/↓: Toggle options • Esc: Cancel\x1B[39m

  \x1B[33m⚠️  Path is required\x1B[39m

"
`;

exports[`Open Composer CLI Component Snapshots GitWorktreeSwitchPrompt renders correctly with worktrees 1`] = `
"

  \x1B[1m\x1B[36m🔄 Switch Git Worktree\x1B[39m\x1B[22m

  Select a worktree to switch to:

  \x1B[32m▶    main\x1B[90m at \x1B[36m/path/to/main\x1B[39m
  \x1B[90m     \x1B[37mfeature-1\x1B[90m at /path/to/feature-1\x1B[39m
  \x1B[90m     \x1B[37mfeature-2\x1B[90m at /path/to/feature-2\x1B[33m [locked: in use]\x1B[39m


  \x1B[90m↑/↓: Navigate • Enter: Switch • Esc: Cancel\x1B[39m

  \x1B[33m📍 = current worktree\x1B[39m

"
`;

exports[`Open Composer CLI Component Snapshots GitWorktreeSwitchPrompt renders correctly with no worktrees 1`] = `
"

  \x1B[1m\x1B[33m⚠️ No Git Worktrees Found\x1B[39m\x1B[22m

  No worktrees available to switch to.

  \x1B[90mPress Esc to cancel\x1B[39m

"
`;
